--- a/NASA/server/package.json
+++ b/NASA/server/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "server",
+  "name": "nasa-project-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "NASA Mission Control",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "watch": "nodemon src/server.js",
+    "start": "PORT=5000 node src/server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
